Do not draw negative-size ShaderEffect(Source) items.

We were a bit inconsistent here. A negative size Image element would not
render at all, a negative size ShaderEffect would render mirrored
and a negative size ShaderEffectSource would trigger an assert.
Be consistent and not draw any of them.

DropShadow from QtGraphicalEffects uses both a ShaderEffectSource and
a ShaderEffect together, so keeping the behavior in ShaderEffect
would make it render incorrectly.

Task-number: QTBUG-31383
Change-Id: Ied5568d7edbc2aed96b00adfdc6aae09b6f2a7d9
Reviewed-by: Mitch Curtis <mitch.curtis@digia.com>